kubernetes_IAC/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp-deployment
  labels:
    app: simple-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-webapp
  template:
    metadata:
      labels:
        app: simple-webapp
    spec:
      containers:
      - name: simple-webapp-container
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-service
spec:
  type: LoadBalancer
  selector:
    app: simple-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
